[package]
name = "bevy_radix_sort"
version = "0.15.0"
edition = "2024"
authors = ["AllenPocketGamer <allenpocketwork@gmail.com>"]
description = "A GPU-based radix sort plugin for Bevy"
repository = "https://github.com/AllenPocketGamer/bevy_radix_sort"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", branch = "main"}
bevy_shader = {git = "https://github.com/bevyengine/bevy", branch = "main"}
bytemuck = { version = "1.7.0", features = ["derive"] }
uuid = "1.0"

[dev-dependencies]
rand = "0.8"
bevy_egui = "0.38"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
serial_test = "3.0"
once_cell = "1.19"

[features]
default = []